--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV=development node dist/src/main",
+    "build:prod": "tsc -p tsconfig.build.json",
+    "postbuild:prod": "copyfiles --up 1 src/**/*.json dist",
+    "start:hmr": "node dist/main.hmr.ts",
+    "start:dev": "NODE_ENV=development ts-node src/main.ts",
+    "start:prod": "NODE_ENV=production node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
