--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:prod": "tsc -p tsconfig.build.json",
     "postbuild:prod": "copyfiles --up 1 src/**/*.json dist",
     "start:hmr": "node dist/main.hmr.ts",
-    "start:dev": "NODE_ENV=development ts-node src/main.ts",
+    "start": "NODE_ENV=development ts-node src/main.ts",
+    "start:dev": "ts-node-dev src/main.ts",
     "start:prod": "NODE_ENV=production node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -26,7 +27,8 @@
     "@nestjs/platform-express": "^10.2.10",
     "file-exists": "^5.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
